--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.2",
+    "boxicons": "^2.1.1",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "reactjs-popup": "^2.0.5"
   },
   "devDependencies": {
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "@types/node": "^17.0.15",
+    "@types/react": "^17.0.39",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "12.0.8",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prisma": "^3.9.2",
+    "typescript": "^4.5.5"
   }
 }
