--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "@prisma/client": "^3.9.2",
     "boxicons": "^2.1.1",
+    "fs-extra": "^10.0.1",
+    "multer": "^1.4.4",
     "next": "12.0.8",
+    "next-auth": "^4.2.1",
+    "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reactjs-popup": "^2.0.5"
